Drop voice notes that do not have a URI.